--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: .*migrations\/.*
+exclude: .*migrations\/.*|.*requirements.txt
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
